[package]
name = "trans_driver"
version = "0.1.0"
authors = ["cossonleo <cossonleo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
md-5 = "0.9"
hex = "0.4"
serde = "1.0"
toml = "0.5"
chrono = "0.4"
structopt = "0.3"
surf = "2.0"
smol = "1.2"
anyhow = "1.0"
async-trait = "0.1"
